--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ Blog berria
 </a>
 </h1>
 <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-Blog berria Kaixo irakurle! Blog hau sortzea bururatu zait, ikusten eta ikasten ditudan hainbat teknologien inguruan hitz egiteko eta, ahal bada, hemen bertan probatzeko.
+Blog berria Kaixo! Blog hau sortzea bururatu zait, ikusten eta ikasten ditudan hainbat teknologien inguruan hitz egiteko eta, ahal bada, hemen bertan probatzeko.
 Bai, badakit. Pixka bat anakronikoa dirudi 2021 urtean blog bat sortzea, TikTok kontu bat egin beharrean. Hala ere, abisupean zaude, ez dut uste ekimen honek asko iraungo duenik.
-Bloga sortzeko Hugo erabili dut. Honek sortutako emaitza web estatiko hutsa denez, errez asko argitaratu daiteke dohaineko zerbitzuetan. Kasu honetan, Github-en bertan utziko dut momentuz.
+Bloga sortzeko Hugo erabili dut. Honek sortutako emaitza web estatiko huts bat denez, errez asko argitaratu daiteke dohaineko zerbitzu ezberdinetan.
 </div>
 <a href=/blog/blog-berria/ class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
 </div>
