--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Xabiren bloga - Xabiren bloga</title><meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://xezpeleta.github.io/css/styles.min.a5a7df09390759ca42764f42dad3f33329ff19740d381c992fdf6beb65b9c4fc.css" integrity="sha256-paffCTkHWcpCdk9C2tPzMyn/GXQNOByZL99r62W5xPw=">
+<title>Xabiren bloga - Xabiren bloga</title><meta name=generator content="Hugo 0.88.1"><link rel=stylesheet href="https://xezpeleta.github.io/css/styles.min.94d3c936814fa09bcb019a183d1c2e8eb51e2b8f56f6c6c7f8a0a033ddff6e6d.css" integrity="sha256-lNPJNoFPoJvLAZoYPRwujrUeK49W9sbH+KCgM93/bm0=">
 </head>
 <body class="flex flex-col min-h-screen"><header class="w-full px-4 pt-4">
 <style type=text/css>input#nav-toggle:checked~label#show-button{display:none}input#nav-toggle:checked~label#hide-button{display:flex}input#nav-toggle:checked~#nav-menu{display:block}</style>
@@ -17,13 +17,19 @@ Xabiren bloga
 </label>
 <ul id=nav-menu class="sm:flex w-full sm:w-auto hidden sm:block mt-2 sm:mt-0 sm:space-x-2">
 <li>
-<a href=https://xezpeleta.github.io/blog/ class="text-gray-500 hover:text-blue-400">Blogs</a>
+<a href=https://xezpeleta.github.io/blog/ class="text-gray-500 hover:text-blue-400">Blog</a>
 </li>
 </ul>
 </nav>
 </header><main class="flex-1 mx-4 md:mx-12 lg:mx-24 mt-4 sm:mt-16">
-<article class="text-center text-gray-700">
-<h1 class="font-serif font-extralight text-5xl text-gray-500">Xabiren bloga</h1>
+<article class=pb-8>
+<div>
+<h2 class="text-2xl font-semibold text-indigo-700 hover:text-indigo-900"><a href=/blog/blog-berria/>Blog berria</a></h2>
+<span class="prose prose-indigo"><p>Kaixo! Blog hau sortzea bururatu zait, ikusten eta ikasten ditudan hainbat teknologien inguruan hitz egiteko eta, ahal bada, praktikan jartzeko.</p></span>
+</div>
+<div>
+<a class="text-indigo-700 hover:text-indigo-900 font-semibold" href=/blog/blog-berria/>Read More…</a>
+</div>
 </article>
 </main><footer class="bottom-0 w-full p-4 text-xs text-center text-gray-400 border-t border-gray-200">
 <p>made with <a href=https://gohugo.io class="underline hover:text-blue-400">Hugo</a> and <a href=https://tailwindcss.com class="underline hover:text-blue-400">TailwindCSS</a></p>
